--- a/templates/index.html
+++ b/templates/index.html
@@ -73,9 +73,9 @@
         <h1>Predict Salary Analysis</h1>
         <!-- Main Input For Receiving Query to our ML -->
         <form action="{{ url_for('predict')}}" method="post">
-            <input type="text" name="experience" placeholder="Experience" required="required" />
-            <input type="text" name="test_score" placeholder="Test Score" required="required" />
-            <input type="text" name="interview_score" placeholder="Interview Score" required="required" />
+            <input type="text" name="experience" placeholder="Experience (years)" required="required" />
+            <input type="text" name="test_score" placeholder="Test Score (Out of 10)" required="required" />
+            <input type="text" name="interview_score" placeholder="Interview Score (Out of 10)" required="required" />
             <button type="submit" class="btn btn-primary btn-block btn-large">Predict</button>
         </form>
         <br>
