--- a/templates/index.html
+++ b/templates/index.html
@@ -70,7 +70,7 @@
 </head>
 <body>
     <div class="login">
-        <h1>Predict Salary Analysis</h1>
+        <h1>Predict Salary Analysis Completed learning cicd</h1>
         <!-- Main Input For Receiving Query to our ML -->
         <form action="{{ url_for('predict')}}" method="post">
             <input type="text" name="experience" placeholder="Experience (years)" required="required" />
